--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
        <<h1>this id the testing thing</h1>>
        <<h2>ttihas is cool staff </h2>>
 
-<<h3>we are bacak</h3>>
+       <<h3>we are bacak</h3>>
+       <http-equiv="www.we.com">
 
 
 
