--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <title></title>
   </head>
   <body>
-       <<h1>this id the testing thing</h1>>
-       <<h2>ttihas is cool staff </h2>>
 
-       <<h3>we are bacak</h3>>
-       <http-equiv="www.we.com">
+       <h1>welcome</h1>
 
 
 
